sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: type mismatch;
 found   : Int
 required: String
        echange (i, i)+ecart
                       ^